# last-albums-charts

./: .editorconfig  .eslintignore  .eslintrc.js  .firebaserc  .gitignore  .prettierrc.js  convertCamelCaseToSnakeCase.js  convertCamelCaseToSnakeCase.test.js  deploy.sh  firebase.json  netlify.toml  package.json  post.md.mustache  t.js
docs/: index.html
docs/archives/: index.html
functions/: .env.example  ecosystem.config.js  package.json
functions/prisma/: schema.prisma
functions/sql/: 5_migration.sql  6_migration.sql  after_album_change.sql  correction.sql  correction_10.sql  correction_11.sql  correction_5.sql  correction_9.sql  database.sql
scraper/: .env.example  Untitled.ipynb  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  launch.zsh  package.json  perehonchuk_lab_2.ipynb  stop.zsh  tsconfig.json
scraper/.ipynb_checkpoints/: perehonchuk_lab_1-checkpoint.ipynb
scraper/data/: dat16.txt
scraper/db/: Dockerfile  schema.sql
scraper/sql/: 1_migration.sql  2_migration.sql  3_migration.sql  4_migration.sql  7_migration.sql  before_album_change.sql  before_album_tag_change.sql  correct.sh  correction_01.sql  correction_02.sql  correction_05.sql  correction_07.sql  correction_08.sql  correction_12.sql  correction_13.sql  correction_3.sql  correction_4.sql  correction_5.sql  correction_6.sql  database.sql
scraper4/: pyproject.toml
scraper4/data/: pyproject.toml
scraper4/data/data/: __init__.py  database.py  delete_tag.py  get_tag_duplicates.py  insert_album_skeleton.py  pick_next_tag_to_scrape.py  save_tag_scrape_success.py
scraper4/lastfm-api/: pyproject.toml
scraper4/lastfm-api/lastfm_api/: __init__.py  acquire.py
scraper4/lastfm-api/lastfm_api/tag/: get_top_albums.py
scraper4/scrape-albums/: pyproject.toml
scraper4/scrape-albums/scrape_albums/: __init__.py  __main__.py  remove_tag_duplicates.py  scrape_albums.py  scrape_albums_by_tag.py
scraper4/tag_blacklist/: pyproject.toml
scraper4/tag_blacklist/tag_blacklist/: __init__.py  blacklisted_tag_endings.txt  blacklisted_tag_starts.txt  blacklisted_tag_substrings.txt  blacklisted_tags.txt  constants.py  is_tag_blacklisted.py
scraper4/telegram_logger/: pyproject.toml
scraper4/telegram_logger/telegram_logger/: __init__.py  escape_message.py
scraper5/: go.mod  go.sum  main.go
scraper6/: jest.config.js  package.json  tsconfig.json
site/: .babelrc  CNAME  package.json  static.config.js  tsconfig.json  workbox-config.js
site2/: next.config.js  package.json
site4/: .gitignore  astro.config.mjs  network_state.json  package.json  tsconfig.json
ssg/: .eslintignore  _config.yml  package.json  tsconfig.json  webpack.config.js
(+955 files in other folders)
